# bibliometric

./: .replit  README.md  bibliometric_analyzer.py  pyproject.toml  run_tests.py
modules/: analyzer.py  citation_analysis.py  data_loader.py  network_analysis.py  text_processor.py  trend_predictor.py  visualizer.py
